--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -50,4 +51,11 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.1"
     // 리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    // 파이어베이스
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
 }
