--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
+    "peer": "^0.6.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
+    "socket.io": "^2.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
