--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nuxt"
+    "dev": "nuxt -p 3000"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "@nuxtjs/vuetify": "^1.12.1",
     "axios": "^0.21.1",
     "nuxt": "^2.15.8",
+    "peerjs": "^1.3.2",
     "vue": "^2.6.14"
   }
 }
