--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/vuetify": "^1.12.1",
     "axios": "^0.21.1",
     "nuxt": "^2.15.8",
+    "nuxt-socket-io": "^1.1.13",
     "peerjs": "^1.3.2",
     "vue": "^2.6.14"
   }
