--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
+    "nunjucks": "^3.2.3",
+    "nuxt-socket-io": "^1.1.23",
     "peer": "^0.6.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
